--- a/flapper-news/Gemfile
+++ b/flapper-news/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
-
+gem 'responders', '~> 2.0'
+gem 'angular_rails_csrf'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0'
 # Use sqlite3 as the database for Active Record
